--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,3 +51,32 @@ ul.nav.nav-pills > li > a:focus {
     color: #101010;
     font: Helvetica;
 }
+
+.container-fluid #slick {
+    padding-left: 25px;
+    padding-right: 10px;
+    box-shadow: 12px;
+    /*margin-top: 150px;*/
+    bottom: 0;
+}
+
+@media (max-width : 1024px){
+    #links img {
+    width: 100%;
+}}
+@media (min-width : 1025px) {
+    #links img {
+    width: 500px;
+}
+}
+
+@media (min-width : 1400px) {
+    #links img {
+    width: 700px;
+}
+}
+
+/*.container-fluid #slick img {*/
+    /*padding: 5px;*/
+    /*background: #ffffff;*/
+/*}*/
