--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,14 +9,13 @@
     <meta content="plipchak" name="author">
     <title>Лик-Реклама</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'plugins/simpleSidebar/css/simple-sidebar.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/gallery-master/css/blueimp-gallery.css' %}">
-    <link rel="stylesheet" href="{% static 'plugins/bootstrap-image-gallery/css/bootstrap-image-gallery.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block css %}{% endblock %}
 </head>
 <body>
-{#<img id="header-image" class="hidden-xs" src="{% static 'images/top2.jpg' %}">#}
+<img id="header-image" class="hidden-xs" src="{% static 'images/top2.bmp' %}">
 
 <div class="navbar-wrapper">
     <div id="main-menu" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -32,13 +31,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li{% if active_page == 'main' %} class="active"{% endif %}><a href="{% url 'index' %}">Главная</a></li>
-                    <li{% if active_page == 'about' %} class="active"{% endif %}><a href="{% url 'about-company' %}">О нас</a></li>
-                    <li{% if active_page == 'contacts' %} class="active"{% endif %}><a href="#">Контакты</a></li>
+                    <li{% if request.session.active == 'main' %} class="active"{% endif %}><a href="{% url 'lik:index' %}">Главная</a></li>
+                    <li{% if request.session.active == 'about' %} class="active"{% endif %}><a href="{% url 'lik:about-company' %}">О нас</a></li>
+                    <li{% if request.session.active == 'contacts' %} class="active"{% endif %}><a href="{% url 'lik:company-contacts' %}">Контакты</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right fnt16">
-                    <li><a href="#">Телефон: {{ request.session.settings.phone }}</a></li>
-                    <li><a href="#">E-mail: {{ request.session.settings.email }}</a></li>
+                    <li><a href="#">Телефон: {{ settings.phone }}</a></li>
+                    <li><a href="#">E-mail: {{ settings.email }}</a></li>
                 </ul>
             </div>
         </div>
@@ -46,9 +45,12 @@
 </div>
 <div id="wrapper">
     <div id="sidebar-wrapper">
-        {% with act_index=0 %}
-            {% include "sidebar.html" %}
-        {% endwith %}
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand">{{ settings.sidebar_title }}</li>
+            {% for item in menu_items %}
+                <li{% if request.session.active == item.name %} class="active"{% endif %}><a href="{% url 'lik:product-cat' item.id %}">{{ item.name }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
     <div id="page-content-wrapper">
         <div class="container-fluid">
@@ -56,17 +58,14 @@
                 <small>{{ title_sm }}</small>
             </h1>
             {% block content %}{% endblock %}
-        {{ session }}
         </div>
 
     </div>
 </div>
 <div class=""></div>
-</body>
 <script type="application/javascript" src="{% static 'plugins/jquery/jQuery2.1.4.js' %}"></script>
 <script type="application/javascript" src="{% static 'plugins/jquery/jquery1.11.1.js' %}"></script>
 <script type="application/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-<script type="application/javascript" src="{% static 'plugins/gallery-master/js/blueimp-gallery.js' %}"></script>
-<script type="application/javascript" src="{% static 'plugins/gallery-master/js/jquery.blueimp-gallery.min.js' %}"></script>
-<script type="application/javascript" src="{% static 'plugins/bootstrap-image-gallery/js/bootstrap-image-gallery.min.js' %}"></script>
+{% block js %}{% endblock %}
+</body>
 </html>
